<resources>
    <string name="app_name">Go Envilab</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Dedy Ismanto</string>
    <string name="nav_header_subtitle">+6266666666</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Pengaturan</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_order">Pesanan Saya</string>
    <string name="menu_order_subordinate">Pesanan Bawahan</string>
    <string name="menu_performance">Performa</string>
    <string name="menu_client">Perusahaan</string>
    <string name="menu_notif">Notifikasi</string>
    <string name="menu_corporate">Layanan Envilab</string>
    <string name="menu_training">Materi Pelatihan</string>
    <string name="menu_partnership">Perjanjian Kemitraan</string>
    <string name="menu_tnc">Syarat dan ketentuan</string>
    <string name="menu_faq">Tanya Jawab</string>
    <string name="menu_contract">Bantuan</string>
    <string name="menu_logout">Keluar</string>
    <string name="menu_account">Akun</string>
    <string name="path_font_robot_regular">fonts/RobotoRegular.ttf</string>
    <string name="path_font_robot_bold">fonts/RobotoBold.ttf</string>
    <string name="submitted_orders">Pesanan Masuk</string>
    <string name="potential_income">Potensi Komisi</string>
    <string name="idr">IDR</string>
    <string name="see_all">Lihat Semua</string>
    <string name="progress_order">Progress Pesanan</string>
    <string name="request">request</string>
    <string name="legend_request">request</string>
    <string name="legend_sampling">sampling</string>
    <string name="legend_complete">complete</string>
    <string name="create_new_client">Tambah Perusahaan</string>
    <string name="create_new_order">Tambah Pesanan</string>
    <string name="cancel_order">Batalkan Pesanan</string>
    <string name="search">Cari</string>
    <string name="close">Tutup</string>
    <string name="company_name">Nama Perusahaan</string>
    <string name="address">Alamat</string>
    <string name="city">Kota</string>
    <string name="province">Provinsi</string>
    <string name="contact_name">Nama Kontak</string>
    <string name="company_phone">Telepon Perusahaan</string>
    <string name="mobile_phone">Telepon Selular</string>
    <string name="save">SIMPAN</string>
    <string name="phone_area_id">+62</string>
    <string name="email">Email</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="agree_tnc">Dengan mengklik kirim, Anda menyetujui Persyaratan dan Ketentuan kami</string>
    <string name="signin">MASUK</string>
    <string name="or">ATAU</string>
    <string name="forgot_password">LUPA PASSWORD</string>
    <string name="button_forgot_password">KIRIM</string>
    <string name="register_as_partner">REGISTRASI MITRA</string>
    <string name="register_as_company">REGISTRASI PERUSAHAAN</string>
    <string name="password">Password</string>
    <string name="onprogress_orders">Pesanan dalam proses</string>
    <string name="completed_orders">Pesanan Selesai</string>
    <string name="submit">SUBMIT</string>
    <string name="create_order">CREATE ORDER</string>
    <string name="create">CREATE</string>
    <string name="choose_company">Pilih Perusahaan</string>
    <string name="picked_services">Pilih Layanan</string>
    <string name="services_company_list">Layanan</string>
    <string name="download_result">HASIL UJI</string>
    <string name="take_camera">Kamera</string>
    <string name="take_gallery">Galeri</string>
    <string name="client_id">ENVAPI-93AA26b8k9</string>
    <string name="client_key">$2y$10$uztr0m4DCEIydYv-f8qg5uTQ-uyNx5JH0eI.aJm9g8K8KNFJhh-VO</string>
    <string name="resend">KIRIM ULANG</string>
    <string name="phone">+62%s</string>
    <string name="chat">Chat</string>
    <string name="account_profile">Profil</string>
    <string name="account_change_password">Ganti Password</string>
    <string name="account_upload">Upload</string>
    <string name="verification_code">KODE VERIFIKASI</string>
    <string name="verification_send">Telah dikirim ke email</string>
    <string name="password_old">Password Lama</string>
    <string name="password_new">Password Baru</string>
    <string name="password_confirm">Konfirmasi Password Baru</string>
    <string name="upload_docs">Upload Dokumen</string>
    <string name="npwp_number_hint">No. NPWP</string>
    <string name="npwp">NPWP</string>
    <string name="skkpk">SPPKP</string>
    <string name="application_permission">Aplikasi membutuhkan perijinan</string>
    <string name="fail_take_image">Gagal mengambil gambar</string>
    <string name="email_envilab">info@envilab-id.com</string>
    <string name="address_envilab">Manyar Mas Karimun, Industrial Business Park B-35\nJl Raya Manyar Km.11, Gresik</string>
    <string name="head_office">HEAD OFFICE AND LABORATORY</string>
    <string name="phone_envilab">+6231 9900 6835</string>
    <string name="send_email">Kirim Email</string>
    <string name="training_video">Video</string>
    <string name="training_pdf">PDF</string>
    <string name="regency">Kabupaten</string>
    <string name="districts">Kecamatan</string>
    <string name="ktp_number_hint">No. KTP</string>
    <string name="ktp">KTP</string>
    <string name="failed_get_video">Url video tidak valid</string>
    <string name="try_again">Coba lagi</string>
    <string name="search_company_hint">Cari Nama Perusahaan</string>
    <string name="search_order_hint">Cari Nama Perusahaan / Kode Pesanan</string>
    <string name="search_service_hint">Cari Layanan</string>
    <string name="company_fax">Fax Perusahaan</string>
    <string name="client_add">Tambah Perusahaan</string>
    <string name="order_add">PESAN</string>
    <string name="order_save">SIMPAN</string>
    <string name="client_edit">Ubah Perusahaan</string>
    <string name="actionbar_not_set">Action bar not set</string>
    <string name="contact_person">Kontak</string>
    <string name="name">Nama</string>
    <string name="occupation">Jabatan</string>
    <string name="create_contact_person">Tambah Kontak</string>
    <string name="company_id_null">Data klien tidak valid</string>
    <string name="contact_person_update">Ubah Kontak</string>
    <string name="contact_person_add">Tambah Kontak</string>
    <string name="call">Panggilan Telepon</string>
    <string name="phone_mandatory">Nomor Telepon wajib di isi</string>
    <string name="email_mandatory">Email wajib di isi</string>
    <string name="registration">REGISTER</string>
    <string name="btn_partner">MITRA</string>
    <string name="btn_company">PERUSAHAAN</string>
    <string name="btn_delete">HAPUS</string>
    <string name="btn_yes">Ya</string>
    <string name="btn_no">Tidak</string>
    <string name="choose_contact_person">Pilih Kontak</string>
    <string name="name_contact_person">Nama Kontak</string>
    <string name="choose_company_mandatory">Pilih Perusahaan Wajib Di Isi</string>
    <string name="choose_contact_person_mandatory">Pilih Kontak Wajib Di Isi</string>
    <string name="choose_service_mandatory">Pilih Layanan Wajib Di Isi</string>
    <string name="service_already_selected">Layanan %s sudah dalam pilihan</string>
    <string name="cancel">BATAL</string>
    <string name="reason">Alasan</string>
    <string name="write_reason">Tulis Alasan</string>
    <string name="reason_mandatory">Alasan Wajib Di Isi</string>
    <string name="cancellation_title">Batalkan Pesanan Anda?</string>
    <string name="menu_schedule">Jadwal</string>
    <string name="day_sunday">Min</string>
    <string name="day_monday">Sen</string>
    <string name="day_tuesday">Sel</string>
    <string name="day_wednesday">Rab</string>
    <string name="day_thursday">Kam</string>
    <string name="day_friday">Jum</string>
    <string name="day_saturday">Sab</string>
    <string name="month_jan">Jan</string>
    <string name="month_feb">Feb</string>
    <string name="month_mar">Mar</string>
    <string name="month_apr">Apr</string>
    <string name="month_may">Mei</string>
    <string name="month_jun">Jun</string>
    <string name="month_jul">Jul</string>
    <string name="month_aug">Agu</string>
    <string name="month_sep">Sep</string>
    <string name="month_oct">Okt</string>
    <string name="month_nov">Nov</string>
    <string name="month_dec">Des</string>
    <string name="dash">-</string>
    <string name="button_review">ULASAN</string>
    <string name="hint_review">Tulis Ulasan</string>
    <string name="button_edit">UBAH</string>
    <string name="give_review">Berikan Ulasan</string>
    <string name="given_review">Ulasan : </string>
    <string name="rate_awesome"> </string>
    <string name="rate_good"> </string>
    <string name="rate_standar"> </string>
    <string name="rate_bad"> </string>
    <string name="rate_poor"> </string>
    <string name="rating">Rating : </string>
    <string name="review_access_deny">Anda tidak mempunyai akses untuk memberi ulasan</string>
    <string name="test_result_hardcopy">Hardcopy</string>
    <string name="test_result_softcopy">Softcopy</string>
    <string name="vendor">Vendor :</string>
    <string name="resi_number">Nomor Resi :</string>
    <string name="copy_resi">SALIN RESI</string>
    <string name="resi_copied">Nomor Resi telah di salin</string>
    <string name="hardcopy_softcopy_not_available">Hasil tes belum tersedia</string>
    <string name="total_complete_income">Total Pesanan Selesai</string>
    <string name="envilab_notif">Envilab Notifikasi</string>
    <string name="total">Total</string>
    <string name="child_partner">Bawahan</string>
    <string name="choose_month">Pilih Bulan</string>
    <string name="navigation_dashboard">DashboardFragment</string>
    <string name="navigation_corporate_service">CorporateServiceCategoriesFragment</string>
    <string name="complete_doc">Mohon lengkapi syarat dokumen anda di menu akun</string>
    <string name="revenue_remarks">Nilai rupiah dari \'Pesanan Masuk\'</string>
    <string name="no_sampling_schedule">Tidak ada jadwal sampling</string>
    <string name="sampling_schedule_periode">Jadwal Sampling %s</string>
    <string name="progress_order_weekly">Performa Mingguan Bulan Berjalan</string>
    <string name="doc_verification">Envilab Indonesia akan memverifikasi dokumen yang sudah anda submit</string>
    <string name="app_version_title">Perbaharui Aplikasi</string>
    <string name="button_update">UPDATE</string>
    <string name="app_version_update">Versi aplikasi terbaru telah tersedia.</string>
    <string name="order_cancellation">Pembatalan Pesanan</string>
    <string name="quotation">Quotation</string>
    <string name="invoice">Service Order</string>
    <string name="choice_preview">Lihat</string>
    <string name="choice_send">Kirim</string>
    <string name="doc_number">Nomor Document</string>
    <string name="general_error">Sistem bermasalah, coba beberapa saat lagi</string>
    <string name="error_invalid_wa_number">Nomor whatsapp tidak valid</string>
    <string name="error_wa_not_install">Aplikasi whatsapp tidak terinstall</string>
    <string name="please_update_account_add_company">Mohon melengkapi nama perusahaan di menu Akun</string>
    <string name="skip">Lewati</string>
    <string name="login_page">Menu Login</string>
    <string name="finish">Selesai</string>
    <string name="subordinate_total_order">Total</string>
    <string name="menu_top_create_order">Pesanan\nBaru</string>
    <string name="menu_top_my_order">Pesanan\nSaya</string>
    <string name="menu_top_service">Layanan\nEnvilab</string>
    <string name="menu_top_create_company">Perusahaan\nBaru</string>
    <string name="menu_top_schedule_sampling">Jadwal\nSampling</string>
</resources>