<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_chip"
        android:paddingTop="3dp"
        android:paddingBottom="3dp">

    <androidx.appcompat.widget.AppCompatTextView
            style="@style/ScheduleDay"
            android:textColor="@color/button_red"
            android:text="@string/day_sunday"/>

    <androidx.appcompat.widget.AppCompatTextView
            style="@style/ScheduleDay"
            android:text="@string/day_monday"/>

    <androidx.appcompat.widget.AppCompatTextView
            style="@style/ScheduleDay"
            android:text="@string/day_tuesday"/>

    <androidx.appcompat.widget.AppCompatTextView
            style="@style/ScheduleDay"
            android:text="@string/day_wednesday"/>

    <androidx.appcompat.widget.AppCompatTextView
            style="@style/ScheduleDay"
            android:text="@string/day_thursday"/>

    <androidx.appcompat.widget.AppCompatTextView
            style="@style/ScheduleDay"
            android:text="@string/day_friday"/>

    <androidx.appcompat.widget.AppCompatTextView
            style="@style/ScheduleDay"
            android:text="@string/day_saturday"/>

</LinearLayout>