<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:showIn="navigation_view">

    <group android:id="@+id/menu2"
           android:checkableBehavior="single">
        <item
                android:id="@+id/nav_notification"
                android:icon="@drawable/ic_notification"
                android:title="@string/menu_notif"
                app:actionLayout="@layout/notification_count"
                android:visible="false"/>
        <item
                android:id="@+id/nav_corporate"
                android:icon="@drawable/ic_corporate"
                android:title="@string/menu_corporate"/>
        <item
                android:id="@+id/nav_training"
                android:icon="@drawable/ic_training"
                android:title="@string/menu_training"/>
        <item
                android:id="@+id/nav_partner"
                android:icon="@drawable/ic_partnership"
                android:title="@string/menu_partnership"/>
    </group>

    <group android:id="@+id/menu3"
           android:checkableBehavior="single">
        <item
                android:id="@+id/nav_tnc"
                android:icon="@drawable/ic_tnc"
                android:title="@string/menu_tnc"/>
        <item
                android:id="@+id/nav_faq"
                android:icon="@drawable/ic_faq"
                android:title="@string/menu_faq"/>
        <item
                android:id="@+id/nav_support"
                android:icon="@drawable/ic_contact"
                android:title="@string/menu_contract"/>
    </group>

    <group android:id="@+id/menu4"
           android:checkableBehavior="single">
        <item
                android:id="@+id/nav_account"
                android:icon="@drawable/ic_person"
                android:title="@string/menu_account"/>
        <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/menu_logout"/>
    </group>

</menu>
