<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

    <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextViewBigBlack"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/order_cancellation"
            android:gravity="center"
            app:fontPath="@string/path_font_robot_bold"/>

    <Space android:layout_width="match_parent" android:layout_height="5dp"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/write_reason"
            style="@style/BaseTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etReason"
                style="@style/TextViewNormalBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:maxLines="4"
                android:ellipsize="end"/>

    </com.google.android.material.textfield.TextInputLayout>

    <include
        layout="@layout/bottom_dialog_space"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonBlue"
            android:text="@string/submit"/>

</LinearLayout>