<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/menu_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <com.dd.ShadowLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:sl_shadowRadius="@dimen/corners_top_menu"
            app:sl_shadowColor="@color/top_menu_shadow"
            app:sl_dx="0dp"
            app:sl_dy="2dp"
            app:sl_cornerRadius="@dimen/corners_top_menu">

        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_top_company"
                android:padding="7.5dp"
                android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_c_create_order"
                    style="@style/TopMenuCompany"
                    android:text="@string/menu_top_create_order"
                    android:drawableTop="@drawable/ic_order_new"/>

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_c_my_order"
                    style="@style/TopMenuCompany"
                    android:text="@string/menu_top_my_order"
                    android:drawableTop="@drawable/ic_my_order"/>

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_c_service"
                    style="@style/TopMenuCompany"
                    android:text="@string/menu_top_service"
                    android:drawableTop="@drawable/ic_envilab_service"/>

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_c_notification"
                    android:layout_height="match_parent"
                    style="@style/TopMenuCompany"
                    android:text="@string/menu_notif"
                    android:drawableTop="@drawable/ic_top_menu_notif"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.dd.ShadowLayout>

</androidx.appcompat.widget.LinearLayoutCompat>