<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

    <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextViewBigBlack"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/app_version_title"
            android:gravity="center"
            app:fontPath="@string/path_font_robot_bold"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextViewNormalGray"
            android:paddingTop="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            tools:text="Aplikasi terbaru versi 10.1.1 telah tersedia"/>

    <include
            layout="@layout/bottom_dialog_space"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonBlue"
            android:text="@string/button_update"/>

</LinearLayout>