<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

    <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextViewSubtitleBoldBlack"
            android:text="@string/child_partner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:background="@drawable/bg_square"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp">

        <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextViewNormalGray"
                android:text="@string/submitted_orders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:paddingEnd="5dp"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvChildSubmit"
                style="@style/TextViewNormalBlack"
                android:gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/dash"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_square">

        <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextViewNormalGray"
                android:text="@string/subordinate_total_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvChildRevenue"
                style="@style/TextViewNormalBlackOneLine"
                android:gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:text="@string/dash"
                android:textColor="@color/button_red"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

        <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextViewSubtitleBoldBlack"
                android:text="@string/menu_order_subordinate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnSeeAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_all"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/blue_link"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvChild"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"/>

</LinearLayout>